@startuml
    Title <size:20>\nPattern: Command\n

    interface UndoableCommand extends Command {
        + undo()
    }

    interface Command {
        + execute()
    }

    class HelloCommand implements Command {
        - output
        + __construct(Receiver)
        + execute()
    }

    class AddMessageDateCommand implements UndoableCommand {
        - output
        + __construct(Receiver)
        + execute()
        + undo()
    }

    class Invoker {
        - command
        + setCommand(Command)
        + run()
    }

    class Receiver {
        - enableDate: bool
        - output: array
        + write()
        + getOutput(): string
        + enableDate()
        + disableDate()
    }

    Command --> Invoker: " injects"
    Receiver -left-> HelloCommand: " injects"
    Receiver --> AddMessageDateCommand: " injects"
@enduml